--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -13,6 +13,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <% @systems.each do |system| %>
 <%  system.module_selections.each do |selected_module|
       if selected_module.module_type == 'base'
+        @base_type = selected_module.attributes['type']
         @cpu_word_size = selected_module.attributes['cpu_word_size'].first.downcase
         if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass)
           @ovirt_base_template = selected_module.attributes['ovirt_template'].first
@@ -23,17 +24,30 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <% if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass) %>
     #oVirt provider begin
     <%= system.name %>.vm.provider :ovirt4 do |ovirt|
-    <%=
-"    ovirt.username = '#{@options[:ovirtuser]}'
-        ovirt.password = '#{@options[:ovirtpass]}'" %>
-    <%= if @options.has_key? :ovirturl
-"    ovirt.url = '#{@options[:ovirturl]}'"
+<%=
+"        ovirt.username = '#{@options[:ovirtuser]}'
+            ovirt.password = '#{@options[:ovirtpass]}'" %>
+<%= if @options.has_key? :ovirturl
+"        ovirt.url = '#{@options[:ovirturl]}'"
         end %>
-    <%= if @options.has_key? :ovirtcluster
-"    ovirt.cluster = '#{@options[:ovirtcluster]}'"
+<%=     if @options.has_key? :ovirtcluster
+"        ovirt.cluster = '#{@options[:ovirtcluster]}'"
         end %>
-    <%=
-"    ovirt.template = '#{@ovirt_base_template}'" %>
+<%=
+"        ovirt.template = '#{@ovirt_base_template}'" %>
+<%=     if @options.has_key? :memory_per_vm
+"        ovirt.memory_size = '#{@options[:memory_per_vm]} MB'\n"
+        elsif @options.has_key? :total_memory
+"        ovirt.memory_size = '#{(@options[:total_memory].to_i / @systems.length.to_i)} MB'\n"
+        elsif @base_type.include? 'desktop'
+"        ovirt.memory_size = '2048 MB'
+            ovirt.memory_guaranteed = '512 MB'\n"
+        else
+"        ovirt.memory_size = '512 MB'\n"
+        end -%>
+<%=     if @options.has_key? :cpu_cores
+"        ovirt.cpu_cores = #{@options[:cpu_cores]}\n"
+        end -%>
         ovirt.console = 'vnc'
         ovirt.insecure = true
         ovirt.filtered_api = true
@@ -68,8 +82,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     elsif @options.has_key? :total_memory
       "      vb.memory = #{@options[:total_memory]}/#{@systems.length}\n"
     end -%>
-<%= if @options.has_key? :max_cpu_cores
-      "      vb.cpus = #{@options[:max_cpu_cores]}\n"
+<%= if @options.has_key? :cpu_cores
+      "      vb.cpus = #{@options[:cpu_cores]}\n"
     end -%>
 <%= if @options.has_key? :max_cpu_usage
       "      vb.customize ['modifyvm', :id, '--cpuexecutioncap', '#{@options[:max_cpu_usage]}']\n"
