--- a/modules/bases/windows_server_2008_r2_amd64/Packerfile.erb
+++ b/modules/bases/windows_server_2008_r2_amd64/Packerfile.erb
@@ -8,8 +8,8 @@
     elsif (@options.has_key? :total_memory)
       "[ \"modifyvm\", \"{{.Name}}\", \"--memory\", \"#{@options[:total_memory]/@systems.length}\" ],"
     end %>
-<%= if (@options.has_key? :max_cpu_cores)
-      "[ \"modifyvm\", \"{{.Name}}\", \"--cpus\", \"#{@options[:max_cpu_cores]}\" ],"
+<%= if (@options.has_key? :cpu_cores)
+      "[ \"modifyvm\", \"{{.Name}}\", \"--cpus\", \"#{@options[:cpu_cores]}\" ],"
     end %>
 <%= if (@options.has_key? :max_cpu_usage)
       "[ \"modifyvm\", \"{{.Name}}\", \"--cpuexecutioncap\", \"#{@options[:max_cpu_usage]}\" ],"
