Rework WIP: Testing changes so far. Still need to rework network-ranges passthrough hack with something more flexible.

--- a/lib/templates/Vagrantfile.erb
+++ b/lib/templates/Vagrantfile.erb
@@ -7,7 +7,8 @@
 <% require 'json'
    require 'base64'
    require 'securerandom' -%>
-<% prefix = @options[:prefix] ? @options[:prefix] + '_' : ''-%>
+<% scenario_name = @scenario.split('/').last.split('.').first
+   prefix = @options[:prefix] ? (@options[:prefix] + '-' + scenario_name) : ('SecGen-' + scenario_name) -%>
 
 VAGRANTFILE_API_VERSION = "2"
 
@@ -16,6 +17,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <%  system.module_selections.each do |selected_module|
       if selected_module.module_type == 'base'
         @base_type = selected_module.attributes['type']
+        @ovirt_template = selected_module.attributes['ovirt_template']
         @cpu_word_size = selected_module.attributes['cpu_word_size'].first.downcase
         if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass)
           @ovirt_base_template = selected_module.attributes['ovirt_template'].first
@@ -50,7 +52,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <%=     if @options.has_key? :cpu_cores
 "        ovirt.cpu_cores = #{@options[:cpu_cores]}\n"
         end -%>
-        ovirt.console = 'vnc'
+        ovirt.console = 'SPICE'
         ovirt.insecure = true
         ovirt.filtered_api = true
         ovirt.debug = true
@@ -92,6 +94,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end -%>
     end
 <% end %>
+    <%  # Adds line that stops cloud-init from attempting to grab meta-data as eth0 is overwritten with provided networks.
+        # TODO: Remove when mutli-network vagrant-plugin issue is resolved
+        if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass) -%>
+        <%= system.name %>.vm.provision 'shell', inline: "echo 'datasource_list: [ None ] '> /etc/cloud/cloud.cfg.d/90_dpkg.cfg"
+    <%  end -%>
 
     # Optimise package caching (re-use downloaded .deb, ruby gems, etc)
 #    if Vagrant.has_plugin?("vagrant-cachier")
@@ -110,7 +117,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 <%   case selected_module.module_type
      when 'base' -%>
     <% if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass) %>   # TODO
-    <%= system.name %>.vm.hostname = '<%= "#{prefix}SecGen-#{system.name}-#{Time.new.strftime("%Y%m%d-%H%M")}".tr('_', '-') %>'
+    <%= system.name %>.vm.hostname = '<%= "#{prefix}#{system.name}".tr('_', '-') %>'
     <%= system.name %>.vm.box = 'ovirt4'
     <%= system.name %>.vm.box_url = 'https://github.com/myoung34/vagrant-ovirt4/blob/master/example_box/dummy.box?raw=true'
     <% else %>
@@ -125,18 +132,22 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     <% end %>
 <%   when 'network' -%>
 <%     if selected_module.attributes['range'].first.nil? || selected_module.attributes['range'].first == "dhcp" -%>
-<<<<<<< HEAD
   <%       if (@options.has_key? :ovirtnetwork) && (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass)  %>
       <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, type: "dhcp", :ovirt__network_name => '<%= "#{@options[:ovirtnetwork]}" %>'
   <%       else %>
-      <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, type: "dhcp"
+      <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, type: "dhcp", auto_config: false
   <%       end %>
-=======
-    <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, type: "dhcp", auto_config: false
->>>>>>> IRI_labs
 <%     else -%>
   <%       if (@options.has_key? :ovirtuser) && (@options.has_key? :ovirtpass) %>
+  <%         if @ovirt_template and @ovirt_template.include? 'kali_linux_msf' %>
+      <%= system.name %>.vm.provision 'shell', inline: "echo \"auto lo\niface lo inet loopback\n\nauto eth0\niface eth0 inet static\n\taddress <%= resolve_network(selected_module.attributes['range'].first)%>\" > /etc/network/interfaces"
+      <%= system.name %>.vm.provision 'shell', inline: "echo '' > /etc/environment"
+  <%         elsif @ovirt_template and @ovirt_template.include? 'debian_desktop_kde' %>
+      <%= system.name %>.vm.provision 'shell', inline: "echo \"\nauto eth1\niface eth1 inet static\n\taddress <%= resolve_network(selected_module.attributes['range'].first)%>\" >> /etc/network/interfaces"
+      <%= system.name %>.vm.provision 'shell', inline: "echo '' > /etc/environment"
+  <%         else %>
       <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, :ovirt__ip => "<%= resolve_network(selected_module.attributes['range'].first)%>", :ovirt__network_name => '<%= "#{@options[:ovirtnetwork]}" %>'
+  <%         end %>
   <%       else %>
       <%= system.name %>.vm.network :<%= selected_module.attributes['type'].first %>, ip: "<%= resolve_network(selected_module.attributes['range'].first)%>"
   <%       end %>
