--- a/modules/generators/structured_content/hackerbot_config/ids/templates/snort.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids/templates/snort.md.erb
@@ -20,7 +20,7 @@ sudo vi /etc/snort/snort.conf
 ==Add the following line:==
 `output alert_fast`
 
-==Change Snort's interface== to eth1 (or as you identified earlier), and set the local network to your IP address range (or any):
+==Change Snort's interface== to eth1 (or as you identified earlier), and set the local network to your IP address range (or "any"):
 
 ```bash
 sudo vi /etc/snort/snort.debian.conf
