--- a/modules/generators/structured_content/hackerbot_config/ids/templates/lab.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids/templates/lab.xml.erb
@@ -99,7 +99,7 @@
 	</messages>
 
 	<tutorial_info>
-		<title>Backing Up and Recovering from Disaster: SSH/SCP, Deltas, and Rsync</title>
+		<title>IDS</title>
 		<tutorial><%= ERB.new(File.read self.templates_path + 'intro.md.erb').result(self.get_binding) %></tutorial>
 		<footer>
 <%= File.read self.templates_path + 'resources.md.erb' %>
