minor wording change

--- a/modules/generators/structured_content/hackerbot_config/integrity_detection/templates/detect_changes_backups.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/integrity_detection/templates/detect_changes_backups.md.erb
@@ -28,8 +28,10 @@ To make things even more interesting, ==edit the /etc/passwd file== and move the
 ```bash
 sudo vi /etc/passwd
 ```
+> **Be careful, making the wrong changes to this file will stop your system from working!**
+
 > Move the cursor onto the line representing your new account (probably at the bottom).
->
+
 > In vi type:
 > :m *-==number==*
 >
