--- a/modules/generators/structured_content/hackerbot_config/integrity_detection/templates/fim_recursive.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/integrity_detection/templates/fim_recursive.md.erb
@@ -53,7 +53,7 @@ Clearly, **the list of hashes is much smaller**.
 Create a new file somewhere in /etc/, containing your name. Name the file whatever you like (for example /etc/test).
 > Hint: 'sudo vi /etc/test', 'i' to enter insert mode, and after typing your name, 'Esc', ':wq'.
 
-Also, change an existing file in /etc/, but do be careful to only make a minor change that will **not cause damage to your system**. For example, you could use vi to edit /etc/hostname ('sudo vi /etc/hostname'), and add a comment to the file such as '#find this comment!'
+Also, change an existing file in /etc/, but do be careful to only make a minor change that will **not cause damage to your system**. For example, you could use vi to edit /etc/wgetrc ('sudo vi /etc/wgetrc'), and add a comment to the file such as '#find this comment!'
 
 Lets try to identify what has changed on our system...
 
