--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/intro.md.erb
@@ -11,7 +11,7 @@
 
 All of these VMs need to be running to complete the lab.
 
-### Your login details for the "desktop", "backup_server" and "ids_server" VMs
+### Your login details for the "desktop" and "backup_server" VMs
 User: <%= $main_user %>
 Password: tiaspbiqe2r (**t**his **i**s **a** **s**ecure **p**assword **b**ut **i**s **q**uite **e**asy **2** **r**emember)
 
@@ -20,9 +20,6 @@ You won't login to the hackerbot_server, but all the VMs need to be running to c
 ### For marks in the module
 1. **You need to submit flags**. Note that the flags and the challenges in your VMs are different to other's in the class. Flags will be revealed to you as you complete challenges throughout the module. Flags look like this: ==flag{*somethingrandom*}==. Follow the link on the module page to submit your flags.
 
-## Timed test!
-The Hackerbot will start and enforce a timer. You have 60 minutes to complete the task.
-
 ## Hackerbot!
 ![small-right](images/skullandusb.svg)
 
@@ -30,9 +27,8 @@ This exercise involves interacting with Hackerbot, a chatbot who will task you t
 
 ---
 
-The commands you may find useful includes:
+Some commands you may find useful include:
 * `rsync`
-* `cp`
 * `chattr`
 * `lsattr`
 * `chmod`
