--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/labsheet.html.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/labsheet.html.erb
@@ -58,7 +58,7 @@
 		background-color: #570138;
 		color: whitesmoke;
 	}
-	.markdown-body p code span {
+	.markdown-body p code span, li code .pln {
 		color: black !important;
 	}
 	.markdown-body p code {
