--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/intro.md.erb
@@ -13,7 +13,8 @@ All of these VMs need to be running to complete the lab.
 
 ### Your login details for the "desktop" and "backup_server" VMs
 User: <%= $main_user %>
-Password: tiaspbiqe2r (**t**his **i**s **a** **s**ecure **p**assword **b**ut **i**s **q**uite **e**asy **2** **r**emember)
+Password: <%= $main_password %>
+(You can copy-paste this password!)
 
 You won't login to the hackerbot_server, but all the VMs need to be running to complete the lab.
 
@@ -35,6 +36,10 @@ Some commands you may find useful include:
 * `hashdeep`
 * `shasum`
 * `mount`
+* `umount`
+* `diff`
+* `tcpdump`
+* `wireshark`
 
 Remember you can learn more about the commands by running: 
 ```bash
