--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/file_perms_attack_4.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/file_perms_attack_4.xml.erb
@@ -1,7 +1,7 @@
 
 	<attack>
 		<!-- topic: Protecting integrity with read-only filesystems-->
-		<prompt>An attempt to edit a file in /etc/ is coming. Stop the attack by bind mounting /etc/ as read-only.</prompt>
+		<prompt>An attempt to edit a file in /etc/ is coming. Stop the attack by bind mounting /etc/ as read-only. (Don't forget to 'sudo umount /etc/' to reverse this after you complete this challenge!)</prompt>
 
 		<post_command>echo 'not read only!' > /etc/you_were_hacked; adduser --disabled-password --gecos "" yourehacked</post_command>
 		<condition>
