--- a/modules/generators/structured_content/hackerbot_config/ids/templates/snort.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids/templates/snort.md.erb
@@ -46,7 +46,7 @@ This should trigger an alert from Snort, which is stored in an alerts log file.
 ```bash
 sudo tail -f /var/log/snort/alert
 ```
->The tail program will wait for new alerts to be written to the file, and will display them as they are logged.
+>The tail program will wait for new alerts to be written to the file, and will display them as they are logged. (Ctrl-C to exit)
 
 ==Do an nmap port scan of the web_server== VM (from the desktop VM):
 
