--- a/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
@@ -4,11 +4,11 @@ Modern network traffic (such as the Internet) typically uses the Internet protoc
 
 The Internet protocol suite has four abstraction layers:
 
-> * **The application layer** is the scope within which applications create user data and communicate this data to other applications on another or the same host. The applications, or processes, make use of the services provided by the underlying, lower layers, especially the Transport Layer which provides reliable or unreliable pipes to other processes. The communications partners are characterized by the application architecture, such as the client-server model and peer-to-peer networking. This is the layer in which all higher level protocols, such as SMTP, FTP, SSH, HTTP, operate. Processes are addressed via ports which essentially represent services.
-> * **The transport layer** performs host-to-host communications on either the same or different hosts and on either the local network or remote networks separated by routers. It provides a channel for the communication needs of applications. UDP is the basic transport layer protocol, providing an unreliable datagram service. The Transmission Control Protocol provides flow-control, connection establishment, and reliable transmission of data.
-> * **The internet layer** has the task of exchanging datagrams across network boundaries. It provides a uniform networking interface that hides the actual topology (layout) of the underlying network connections. It is therefore also referred to as the layer that establishes internetworking, indeed, it defines and establishes the Internet. This layer defines the addressing and routing structures used for the TCP/IP protocol suite. The primary protocol in this scope is the Internet Protocol, which defines IP addresses. Its function in routing is to transport datagrams to the next IP router that has the connectivity to a network closer to the final data destination.
-> * **The link layer** defines the networking methods within the scope of the local network link on which hosts communicate without intervening routers. This layer includes the protocols used to describe the local network topology and the interfaces needed to effect transmission of Internet layer datagrams to next-neighbor hosts.
-> - (https://en.wikipedia.org/wiki/Internet_protocol_suite#Abstraction_layers)
+> * *"**The application layer** is the scope within which applications create user data and communicate this data to other applications on another or the same host. The applications, or processes, make use of the services provided by the underlying, lower layers, especially the Transport Layer which provides reliable or unreliable pipes to other processes. The communications partners are characterized by the application architecture, such as the client-server model and peer-to-peer networking. This is the layer in which all higher level protocols, such as SMTP, FTP, SSH, HTTP, operate. Processes are addressed via ports which essentially represent services.*
+> * ***The transport layer** performs host-to-host communications on either the same or different hosts and on either the local network or remote networks separated by routers. It provides a channel for the communication needs of applications. UDP is the basic transport layer protocol, providing an unreliable datagram service. The Transmission Control Protocol provides flow-control, connection establishment, and reliable transmission of data.*
+> * ***The internet layer** has the task of exchanging datagrams across network boundaries. It provides a uniform networking interface that hides the actual topology (layout) of the underlying network connections. It is therefore also referred to as the layer that establishes internetworking, indeed, it defines and establishes the Internet. This layer defines the addressing and routing structures used for the TCP/IP protocol suite. The primary protocol in this scope is the Internet Protocol, which defines IP addresses. Its function in routing is to transport datagrams to the next IP router that has the connectivity to a network closer to the final data destination.*
+> * ***The link layer** defines the networking methods within the scope of the local network link on which hosts communicate without intervening routers. This layer includes the protocols used to describe the local network topology and the interfaces needed to effect transmission of Internet layer datagrams to next-neighbor hosts.*" 
+(https://en.wikipedia.org/wiki/Internet_protocol_suite#Abstraction_layers)
 
 ### Common services and (application layer) protocols
 In order to make sense of network traffic, it is important to be aware of common protocols and port numbers.
@@ -32,16 +32,43 @@ In order to make sense of network traffic, it is important to be aware of common
 | tcp     | 989/990 | FTP over TLS/SSL (RFC 4217) |
 | tcp     | 6660-6669 | Internet Relay Chat (IRC) |
 
-Please ensure you understand what each are used for. If you are not aware of what these protocols are, do some online reading. 
+Please ensure you understand what each of these ports are used for. If you are not aware of what these protocols are, do some online reading. 
 > This may be a useful resource: http://www.pearsonitcertification.com/articles/article.aspx?p=1868080
 
 Keep in mind that in recent years more and more network based functionality is moving to be hosted via Web protocols (HTTP and HTTPS).
 
 ### Using Wireshark
 
-Note that in Wireshark you can view individual packets, including IP and TCP headers. Wireshark also has support for viewing TCP streams, so that you can view the traffic at the application layer as it is sent between the two computers (such as, client and server). Simply right-click on a TCP entry and select "Follow -- TCP Stream".
+Note that in Wireshark you can view individual packets, including IP and TCP headers. Wireshark also has support for viewing TCP streams, so that you can view the traffic at the application layer as it is sent between the two computers (such as, client and server). Simply right-click on a TCP entry and select *Follow > TCP Stream*.
 
-# TODO START Wireshark and follow stream on web browse
+**On the ids_server VM:**
+
+==Start Wireshark:==
+
+```bash
+kdesudo wireshark &
+```
+
+Start capturing, listening to the interface with IP address <%= $ids_server_ip %>.
+> If you are not sure, list the interfaces with `ifconfig` or `ip a s`
+
+**On the desktop VM:**
+
+While Wireshark is listening, ==access a web page from Firefox == browse to ==[*http://<%= $web_server_ip %>*](http://<%= $web_server_ip %>)== (In a new tab.)
+
+**On the ids_server VM:**
+
+Note that Wireshark uses colouring to make it easier to view traffic at a glance. ==View the colouring rules== via *View > Coloring Rules*.
+> Note that TCP is light purple
+
+
+In Wireshark ==use display filters== to narrow down the packets displayed. At the top of the Wireshark window, enter `tcp.port == 80`.
+
+Right click the Web traffic, and select *Follow > TCP Stream*.
+
+Right click the Web traffic, and select *Follow > HTTP Stream*.
+
+==LogBook Question: What is the difference between these two views?==
 
 ## Writing your own Snort rules
 
@@ -55,7 +82,7 @@ In general, rules are defined on one line (although, they can break over lines b
 
 where header = "**action** (log,alert) **protocol** (ip,tcp,udp,icmp,any) **source_IP** **source_port** **direction** (-&gt;,&lt;&gt;) **destination_IP** **destination_port**"
 
-> for example: `alert tcp any any -> any any` to make an alert for all TCP traffic, or `alert tcp any any -> 192.168.0.1 23` to make an alert for connections to telnet on the given IP address
+> for example: `alert tcp any any -> any any` to make an alert for all TCP traffic, or `alert tcp any any -> <%= $web_server_ip %> 80` to make an alert for connections to unencrypted Web on the web_server VM IP address
 
 and body = "**option; option: "parameter"; ...**"
 
@@ -79,23 +106,71 @@ To give a unique identifier and revision version number:
 
 So for example the body could be:
 
-> `msg: "user login attempt"; content: "user"; classtype:attempted-user; sid:1000001; rev:1;`
+> `msg: "Website access"; content: "GET"; sid:1000001; rev:1;`
+
+<% $random_string = SecureRandom.hex(3) %>
 
 And bringing all this together a Snort rule could read:
+> `alert tcp any any -> <%= $web_server_ip %> 80 (msg: "Website access <%= $random_string %>"; content: "GET"; sid:1000001; rev:1;)`
 
-> `alert tcp any any -> 192.168.0.1 110 (msg: "Email login attempt"; content: "user"; classtype:attempted-user; sid:1000001; rev:1;)`
+**On the ids_server VM:**
 
-This rule looks at packets destined for 192.168.0.1 on the pop3 Email port (110), and sends an alert if the content contains the "user" command (which is used to log on to check email). Note that this rule is imperfect as it is, since it is case sensitive.
+Let us edit the rules file:
+
+```bash
+chown <%= $main_user %> $RULE_PATH/my.rules
+```
 
 Add the rule, and reload Snort:
 
 ```bash
-echo "alert tcp any any -> 192.168.0.1 110 (msg: "Email login attempt"; content: "user"; classtype:attempted-user; sid:1000001; rev:1;)" >> /etc/snort/rules/my.rules
+echo "alert tcp any any -> <%= $web_server_ip %> 80 (msg: "Website access  <%= $random_string %>"; content: "GET"; sid:1000001; rev:1;)" >> /etc/snort/rules/my.rules
 
 sudo service snort restart
 ```
 
+==Test the new rule...==
+
+**On the desktop VM:**
+
+While Wireshark is listening, ==access a web page from Firefox == browse to ==[*http://<%= $web_server_ip %>*](http://<%= $web_server_ip %>)== (In a new tab.)
+
+**On the ids_server VM:**
+==View the Snort alert file, to confirm your new rule generated an alert==
+
+```bash
+sudo tail /var/log/snort/alert
+```
+
+> The output should include the alert, with <%= $random_string %>. Note that Hackerbot will instruct you to include random strings such as this, in the alerts.
+
+
+
+# TODO CUT HERE
+
+> `alert tcp any any -> any 110 (msg: "Email login attempt"; content: "user"; classtype:attempted-user; sid:1000002; rev:1;)`
+
+This rule looks at packets destined for the pop3 Email port (110), and sends an alert if the content contains the "user" command (which is used to log on to check email). Note that this rule is imperfect as it is, since it is case sensitive.
+
+**On the ids_server VM:**
+
+Add the rule, and reload Snort:
+
+```bash
+echo "alert tcp any any -> any 110 (msg: "Email login attempt"; content: "user"; classtype:attempted-user; sid:1000002; rev:1;)" >> /etc/snort/rules/my.rules
+
+sudo service snort restart
+```
+
+**On the desktop VM:**
+
+==Test the new rule...==
+
+
+Open Thunderbird, and check your mail.
+#TODO Thunderbird module
 # TODO add instructions to test this email rule
+
 
 There are many more options that can make rules more precise and efficient. For example, making them case insensitive, or starting to search content after an offset. Feel free to do some reading, to help you to create better IDS rules.
 
