Hackerbot and lab updates

--- a/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
@@ -13,7 +13,7 @@ The Internet protocol suite has four abstraction layers:
 ### Common services and (application layer) protocols
 In order to make sense of network traffic, it is important to be aware of common protocols and port numbers.
 
-| tcp/udp | Port(s) | Service |
+| TCP/UDP | Port(s) | Service |
 |---------|---------|---------|
 | tcp     | 20/21   | File Transfer Protocol (FTP) (RFC 959) |
 | tcp     | 22      | Secure Shell (SSH) (RFC 4250-4256) |
