--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/backups_rsync_steps_attacks.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_1/templates/backups_rsync_steps_attacks.xml.erb
@@ -64,7 +64,7 @@
 		</condition>
 		<condition>
 			<output_matches>00</output_matches>
-			<message>:( You backed up to the correct location, but it wasn't an incremental backup... You probably need to ssh in and delete that last backup and try again.</message>
+			<message>:( You backed up to the correct location, but it wasn't an differential backup... You probably need to ssh in and delete that last backup and try again.</message>
 		</condition>
 		<else_condition>
 			<message>:( Something went wrong...</message>
